# continuwuity

./: .dockerignore  .dockerignorefile  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  book.toml  committed.toml  compose.yml  conduwuit-example.toml  deploy_website.nu  development.md  engage.toml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  qodana.yaml  release.toml  renovate.json  rspress.config.ts  rust-toolchain.toml  taplo.toml  towncrier.toml  tsconfig.json  update_notes.nu
.forgejo/: pull_request_template.md
.github/: FUNDING.yml
arch/: conduwuit.service
changelog.d/: +12935c96.feature.md  +16e3dce7.feature.md  +1770db35.feature.md  +30d4369c.bugfix.md  +32bb7e0d.bugfix.md  +34ebe57e.bugfix.md  +39fcec3a.bugfix.md  +3a1a284e.removal.md  +6d0bc844.bugfix.md  +6de5f7b2.misc.md  +724f9fed.bugfix.md  +75749b75.misc.md  +7865cde6.feature.md  +85568e80.feature.md  +8777c56c.bugfix.md  +88fbb987.bugfix.md  +8b3a57647.bugfix.md  +91e96207.bugfix.md  +98691708.feature.md  +a3260bd06.bugfix.md  +cde4a9ec3.bugfix.md  +df2f1c78.bugfix.md  +f4a756d9.feature.md  +ffabfdf8.feature.md  1249.bugfix.md  1251.feature  1253.feature  1257.bugfix  1261.bugfix  1263.feature  1266.feature  1271.feature  1272.feature  1275.bugfix  1276.bugfix  1277.feature  1278.misc.md  1279.feature.md  1288.feature.md  1290.bugfix.md  (+57 more)
complement/: complement.config.toml
debian/: README.md  conduwuit.service
docker/: Dockerfile  musl.Dockerfile
docs/: DATABASE_MERMAID_DIAGRAMS.md  DATABASE_RELATIONSHIPS.md  DATABASE_SCHEMA.md  SUMMARY.md  _meta.json  _nav.json  admin_reference.md  appservices.md  appservices.mdx  calls.mdx  community.md  community.mdx  conduwuit_coc.md  configuration.md  configuration.mdx  deploying.md  development.md  index.mdx  introduction.md  introduction.mdx  maintenance.md  maintenance.mdx  onboarding.mdx  troubleshooting.md  troubleshooting.mdx  turn.md  turn.mdx
fedora/: conduwuit.service  continuwuity.spec.rpkg
src/build_metadata/: Cargo.toml  build.rs  mod.rs
src/stitcher/: Cargo.toml  algorithm.rs  memory_backend.rs  mod.rs
src/stitcher/examples/: repl.rs
src/stitcher/test/: mod.rs  parser.rs
src/stitcher/test/testcases/: 001-receiving_new_events.stitched  002-recovering_after_netsplit.stitched  zzz-being_before_a_gap_item_beats_being_after_an_existing_item_multiple.stitched  zzz-chains_are_reordered_using_prev_events.stitched  zzz-empty_then_simple_chain.stitched  zzz-empty_then_two_chains.stitched  zzz-gaps_appear_before_events_referring_to_them.stitched  zzz-gaps_appear_before_events_referring_to_them_received_order.stitched  zzz-if_prev_events_determine_order_they_override_received.stitched  zzz-insert_into_first_of_several_gaps.stitched  zzz-insert_into_last_of_several_gaps.stitched  zzz-linked_events_in_a_diamond_are_split_across_gaps.stitched  zzz-middle_of_batch_matches_gap_and_end_of_batch_matches_end.stitched  zzz-multiple_events_referring_to_the_same_missing_event.stitched  zzz-multiple_events_referring_to_the_same_missing_event_first_has_more.stitched  zzz-multiple_missing_prev_events_turn_into_a_single_gap.stitched  zzz-received_order_wins_within_a_subgroup_if_no_prev_event_chain.stitched
xtask/: Cargo.toml
xtask/generate-admin-command/: Cargo.toml  admin.md
xtask/generate-admin-command/src/: main.rs
xtask/generate-generate-commands/: Cargo.toml
xtask/generate-generate-commands/src/: main.rs
xtask/main/: Cargo.toml
xtask/main/src/: main.rs
xtask/src/: main.rs
xtask/src/tasks/: mod.rs
xtask/src/tasks/generate_docs/: admin_commands.rs  mod.rs
xtask/src/tasks/generate_release_notes/: mod.rs
xtask/templates/: release-notes.md
xtask/templates/admin/: category.md  index.md
(+762 files in other folders)
