[package]
name = "xtask"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["generate-docs"]
generate-docs = ["dep:conduwuit", "dep:conduwuit-admin"]

[dependencies]
clap.workspace = true
conduwuit = { workspace = true, optional = true }
conduwuit-admin = { workspace = true, optional = true }

askama = "0.15.1"
cargo_metadata = "0.23.1"
duct = "1.1.1"

[lints]
workspace = true
