[package]
name = "conduwuit_build_metadata"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


build = "build.rs"
# [[bin]]
# path = "main.rs"
# name = "conduwuit_build_metadata" 

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]


[dependencies]

[build-dependencies]
built = {version = "0.7", features = ["cargo-lock", "dependency-tree"]}

[lints]
workspace = true
