[package]
name = "conduwuit_build_metadata"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


build = "build.rs"
# [[bin]]
# path = "main.rs"
# name = "conduwuit_build_metadata"

[lib]
path = "mod.rs"
crate-type = [
    "rlib",
    # "dylib",
]

[features]


[dependencies]

[build-dependencies]
built = { version = "0.8", features = [] }
cargo_metadata = { version = "0.23.1" }
[lints]
workspace = true
